--- a/integration-android/pom.xml
+++ b/integration-android/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>integration-android</artifactId>
 
 	<version>2.0</version>
-	<name>Solcoin Integration for Android</name>
+	<name>GanjaCoin Integration for Android</name>
 
 
 	<parent>
