--- a/sample-integration-android/AndroidManifest.xml
+++ b/sample-integration-android/AndroidManifest.xml
@@ -16,7 +16,7 @@
 		android:normalScreens="true"
 		android:smallScreens="true" />
 
-	<application android:label="Solcoin in-app payment sample" >
+	<application android:label="GanjaCoin in-app payment sample" >
 
 		<activity
 			android:name="de.schildbach.wallet.integration.sample.SampleActivity"
